--- a/css/styles.css
+++ b/css/styles.css
@@ -18,14 +18,6 @@ p {
   text-align: center;
 }
 
-#result .green {
-  color: #2ecc71;
-}
-
-#result .red {
-  color: #e74c3c;
-}
-
 #userInput {
   width: 100px;
   height: 70px;
@@ -45,16 +37,16 @@ input::placeholder {
   font-size: 20px;
 }
 
-
 #countdown, #result {
   width: 450px;
   height: 40px;
+  text-align: center;
+  padding: 10px;
   background-color: rgb(178, 158, 192);
   color: rgb(237, 234, 240);
   font-size: 16px;
   border-radius: 5px;
   margin: 10px;
-  padding-top: 30px 30px;
   border: none;
   display: flex;
   flex-direction: column;
